[package]
name = "eps_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# axum = { version = "0.6.0-rc.2", features = ["macros"] }
axum = { git = "https://github.com/tokio-rs/axum", features = ["macros"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = {version = "0.7.4", features = ["io"] }
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eyre = "0.6.8"
clap = { version = "4.0.15", features = ["derive", "env"] }
resvg = "0.23.0"
usvg = "0.23.0"
tiny-skia = "0.6.6"
mime = "0.3.16"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
serde_json = "1.0"
test_dir = "0.2.0"

[profile.release]
lto = true
